--- a/SOM_Kohonen_WpfApp/SOM_Kohonen_WpfApp.csproj
+++ b/SOM_Kohonen_WpfApp/SOM_Kohonen_WpfApp.csproj
@@ -98,9 +98,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Models\Settings\DataColumn.cs" />
+    <Compile Include="Models\Settings\InputOption.cs" />
     <Compile Include="Views\SOMWizardWindow.xaml.cs">
       <DependentUpon>SOMWizardWindow.xaml</DependentUpon>
     </Compile>
+    <Page Include="Styles\Datagrid.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
