--- a/SOM_Kohonen_WpfApp/SOM_Kohonen_WpfApp.csproj
+++ b/SOM_Kohonen_WpfApp/SOM_Kohonen_WpfApp.csproj
@@ -56,10 +56,10 @@
     <ApplicationIcon>Resources\icon.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>21A6AEE0F0A57FCB3E84EFCEA5312B4EA0076597</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>5A8FC04116FFD6DA8A247DBAC2DBB102A265D807</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>SOM_Kohonen_WpfApp_2_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>SOM_Kohonen_WpfApp_3_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>true</GenerateManifests>
@@ -101,8 +101,12 @@
     <Compile Include="Models\Settings\DataColumn.cs" />
     <Compile Include="Models\Settings\InputOption.cs" />
     <Compile Include="Service\RandomGenerator.cs" />
+    <Compile Include="Views\ParameterToPastelBrushConverter.cs" />
     <Compile Include="Views\SOMWizardWindow.xaml.cs">
       <DependentUpon>SOMWizardWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\TextMappingsWindow.xaml.cs">
+      <DependentUpon>TextMappingsWindow.xaml</DependentUpon>
     </Compile>
     <Page Include="Styles\Datagrid.xaml">
       <SubType>Designer</SubType>
@@ -129,6 +133,9 @@
     </Compile>
     <Page Include="Views\SOMWizardWindow.xaml">
       <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\TextMappingsWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
@@ -158,6 +165,7 @@
     </None>
     <None Include="SOM_Kohonen_WpfApp_1_TemporaryKey.pfx" />
     <None Include="SOM_Kohonen_WpfApp_2_TemporaryKey.pfx" />
+    <None Include="SOM_Kohonen_WpfApp_3_TemporaryKey.pfx" />
     <None Include="SOM_Kohonen_WpfApp_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
