Add NodeType enum and update Map class reference

--- a/SOM_Kohonen_WpfApp/SOM_Kohonen_WpfApp.csproj
+++ b/SOM_Kohonen_WpfApp/SOM_Kohonen_WpfApp.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Models\Settings\DataColumn.cs" />
     <Compile Include="Models\Settings\InputOption.cs" />
     <Compile Include="Service\RandomGenerator.cs" />
+    <Compile Include="SOM\NodeType.cs" />
     <Compile Include="Views\ParameterToPastelBrushConverter.cs" />
     <Compile Include="Views\SOMWizardWindow.xaml.cs">
       <DependentUpon>SOMWizardWindow.xaml</DependentUpon>
